--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>ISAW GA 3024</title>
-  </head>
-  <body>
-    <!-- page content -->
-  </body>
-</html>
+<!doctype html>
+<html lang=en>
+<head>
+<meta charset=utf-8>
+<title>blah</title>
+</head>
+<body>
+<p>I'm the content</p>
+</body>
