--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang=en>
 <head>
 <meta charset=utf-8>
-<title>blah</title>
+<title></title>
 </head>
 <body>
-<p>I'm the content</p>
+<p>Hello World</p>
 </body>
