--- a/georgios-tsolakis-gt939/index.html
+++ b/georgios-tsolakis-gt939/index.html
@@ -5,5 +5,5 @@
 <title>ISAW GA3024</title>
 </head>
 <body>
-<p><a href="http://isaw.nyu.edu/">ISAW</a></p>
+<p><a href="http://isaw.nyu.edu/graduate-studies/seminar-descriptions">Course Description</a></p>
 </body>
