--- a/georgios-tsolakis-gt939/index.html
+++ b/georgios-tsolakis-gt939/index.html
@@ -5,22 +5,5 @@
 <title>ISAW GA3024</title>
 </head>
 <body>
-<p><a href="http://insaph.kcl.ac.uk/iaph2007/iAph120205.html#edition"><it>I.Aphr.</it> 12.205</a></p>
-i
-[εἰσησαγ]αμένης τῆς βουλῆς [ἔ]δοξε [τῇ βούλῃ καὶ τῷ δήμῳ ? vac. γνώμη]
-ἀρχόντων καὶ Ζ̣ήνωνος τοῦ Ὑψικλέους το[ῦ Ζήνωνος τοῦ Ὑψικλέ]-
-ους τοῦ Μενάνδρου τοῦ Ζήνωνος γραμμα̣[τέως δήμου τὸ δεύ]-
-5τερον καὶ Ἀπολλωνίου τοῦ Δημητρίου τοῦ Λ̣[·· c. 7 ·· τοῦ Δημη]-
-τρίου καὶ Διογένης τοῦ Διογένους τοῦ Μενά[νδρου] [·· c. 6 ·· τῶν]
-ἐπὶ τῆς χώρας στρατηγῶν bar ἐπεὶ Τατία Ὑψικλέ[ους τοῦ Ἀδράσ]-
-του τοῦ Νεικοτείμου τοῦ Ἀρτεμιδώρου το[ῦ Ζήνωνος] [Ἱέρα]-
-κος Ἀτταλὶς γενομένη ἱερεία Σεβαστῶν π̣[άτρος καὶ προγό]-
-10νων ὑπάρχουσα τῶν πρώτων καὶ συνεκτικ[ότων τὴν ?πατρίδα]
-καὶ ἐν γυμνασιαρχίαις καὶ στεφανηφορίαις [καὶ ?ἀγωνοθεσίαις]
-καὶ ἀρχιερωσύναις καὶ ἔργων ἀναθέσεσιν κ[αὶ ·· c. 9 ·· ἐκ τῶν]
-ἰδίων γεγονότων ζήσασα βίον σώφρονα κ[αὶ ?κοσμίον καὶ ἀναλο]-
-γοῦντα τῇ τοῦ γένους σεμνότητι προμοί[ρως νῦν μεθίσταται]
-15 τοῦ βίου ἐπί τε τούτῳ δημόσιον ἡ πόλι[ς ·· c. 16 ··]
-ἁρπάσασά τε τὸ πτῶμα ὁμοθυμαδὸν [·· c. 19 ··]
-vac. vac. [·· ? ·· ? vac. ·· ? ··]
+<p><a href="http://isaw.nyu.edu/graduate-studies/seminar-descriptions">Course Description</a></p>
 </body>
