--- a/georgios-tsolakis-gt939/index.html
+++ b/georgios-tsolakis-gt939/index.html
@@ -5,5 +5,6 @@
 <title>ISAW GA3024</title>
 </head>
 <body>
-<p><a href="http://isaw.nyu.edu/graduate-studies/seminar-descriptions">Course Description</a></p>
+<p><a href="http://insaph.kcl.ac.uk/iaph2007/iAph120205.html#edition">I.Aphr. 12.205</a></p>
+
 </body>
