--- a/georgios-tsolakis-gt939/index.html
+++ b/georgios-tsolakis-gt939/index.html
@@ -5,6 +5,5 @@
 <title>ISAW GA3024</title>
 </head>
 <body>
-<p><a href="http://insaph.kcl.ac.uk/iaph2007/iAph120205.html#edition">I.Aphr. 12.205</a></p>
-
+<p><a href="http://isaw.nyu.edu/">ISAW</a></p>
 </body>
