--- a/maticic-del-dm3769/index.html
+++ b/maticic-del-dm3769/index.html
@@ -5,5 +5,5 @@
 <title>ISAW GA3024</title>
 </head>
 <body>
-<p><a href="http://isaw.nyu.edu/">ISAW</a></p>
+<p><a href="http://languagehat.com/rip-stanley-kunitz/">“Then the devil took him into a high mountain and showed him the kingdoms of the world and said that he would give them to him if he would fall down and worship him. But Jesus said: Get thee hence, Satan. That’s the end of the story according to the good simple Matthew. But it wasn’t. The devil was sly and he came to Jesus once more and said: If thou wilt accept shame and disgrace, scourging, a crown of thorns and death on the cross thou shalt save the human race, for greater love hath no man than this, that a man lay down his life for his friends. Jesus fell. The devil laughed till his sides ached, for he knew the evil men would commit in the name of their redeemer.”</a></p>
 </body>
