--- a/david-ratzan-dmratzan/index.html
+++ b/david-ratzan-dmratzan/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <p><a href="http://isaw.nyu.edu/">ISAW</a></p>
+<img src="smiley.gif" alt="Smiley face" width="42" height="42">
 <p><a href="http://papyri.info">Papyri.info</a> has two primary components. The Papyrological Navigator (PN) supports searching, browsing, and aggregation of ancient papyrological documents and related materials; the Papyrological Editor (PE) enables multi-author, version controlled, peer reviewed scholarly curation of papyrological texts, translations, commentary, scholarly metadata, institutional catalog records, bibliography, and images.</p>
 </body>
 
