--- a/cole-emily-ecccole/index.html
+++ b/cole-emily-ecccole/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <p><a href="http://isaw.nyu.edu/">ISAW</a></p>
-<p>Since the early nineteenth century, the fascination with ancient Egypt seems to have affected every field of American culture. Some of the most important areas of culture influenced by <a href="https://en.wikipedia.org/wiki/Egyptomania">Egyptomania</a> are literature, architecture, art, film, politics and religion. There were two important waves of Egyptomania in the nineteenth century, especially in arts and design, which were both caused by publications about Egypt that became very popular: Vivant Denon, Voyage dans la Basse et la Haute Egypt (1802), and the Institute of Egypt's Description de l'Egypte (1809).</p> 
+<p>Since the early nineteenth century, the fascination with ancient Egypt seems to have affected every field of American culture. Some of the most important areas of culture influenced by <a href="https://en.wikipedia.org/wiki/Egyptomania">Egyptomania</a> are literature, architecture, art, film, politics and religion. There were two important waves of Egyptomania in the nineteenth century, especially in arts and design, which were both caused by publications about Egypt that became very popular: Vivant Denon, Voyage dans la Basse et la Haute Egypt (1802), and the Institute of Egypt's Description de l'Egypte (1809).</p>
+<p><img src="https://drsphinx.files.wordpress.com/2013/06/cole-pair-combined.jpg"></p> 
 </body>
