--- a/stone-kelley-kelleystone/index.html
+++ b/stone-kelley-kelleystone/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <p>Standard accounts of Roman mythology describe the soul as immortal and judged at death before a tribunal in the underworld, with those who had done good being sent to the Elysian Fields and those who had done ill sent to Tartarus. It is unclear how ancient such beliefs were, as they seem influenced by Greek mythology and mystery cults. The mysteries continued under Rome and seem to have promised immortality only for the initiated. Known forms of esoteric religion combined Roman, Egyptian, and Middle Eastern mythology and astrology, describing the progress of its initiates through the regions of the moon, sun, and stars. The uninitiated or virtueless were then left behind, the underworld becoming solely a place of torment. Common depictions of the afterlife of the bless include rest, a celestial banquet, and the vision of God (Deus or Jupiter).</p>
-<p><img src=https://upload.wikimedia.org/wikipedia/commons/9/9c/Pluto_Serapis_and_Persephone_Isis_Heraklion_museum.jpg></p>
+<p><img src=https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Pluto_Serapis_and_Persephone_Isis_Heraklion_museum.jpg/587px-Pluto_Serapis_and_Persephone_Isis_Heraklion_museum.jpg></p>
 <p><a href=https://en.wikipedia.org/wiki/Roman_funerary_practices>Roman funerary practices</a></p>
 </body>
