--- a/justement-kate-katejustement/index.html
+++ b/justement-kate-katejustement/index.html
@@ -8,4 +8,5 @@
 <p><a href="http://isaw.nyu.edu/">ISAW</a></p>
 <p>Kaneš, inhabited continuously from the Chalcolithic period to Roman times, flourished as an important Hattic, Hittite and Hurrian city, which contained a colonised large merchant quarter (kârum) of the Old Assyrian Empire from ca. 21st to 18th centuries BC. This kârum appears to have served as "the administrative and distribution centre of the entire Assyrian colony network in Anatolia."[1] A late (c 1400 BC) witness to an old tradition includes a king of Kaneš called Zipani among seventeen local city-kings who rose up against the Akkadian Naram-Sin (ruled c.2254-2218 BC).[2] It is the site of discovery of the earliest traces of the Hittite language, and the earliest attestation of any Indo-European language, dated to the 20th century BC. The native term for the Hittite language was nešili "language of Neša".</p>
 <p><a href="https://en.wikipedia.org/wiki/K%C3%BCltepe">More info here</a><p>
+<p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/K%C3%BCltepeOberstadtPalast.jpg/640px-K%C3%BCltepeOberstadtPalast.jpg"><p>
 </body>
