--- a/bayani-narges-nargesbayani/index.html
+++ b/bayani-narges-nargesbayani/index.html
@@ -6,5 +6,5 @@
 </head>
 <body>
 <p><a href="http://www.iranicaonline.org/articles/tepe-hissar"</a>The subsistence economy was based on agriculture. From Hissar II onward plant remains indicate “an agricultural system based on cereals [glume and free-threshing wheats, naked and hulled barley] and the utilization of local fruit [olive, grapevine] plant resources” (Costantini and Dyson, p. 66). Lentil seeds and legumes were also present. Cattle and sheep figurines indicate herding activities (Mashkour).</p>
-<img src="http://www.penn.museum/sites/expedition/files/2002/03/alabaster-disc-tepe-hissar.jpg">
+<img src="http://www.penn.museum/sites/expedition/files/2002/03/alabaster-disc-tepe-hissar.jpg"/img>
 </body>
