--- a/brunner-kyle-kbb310/index-kyle.html
+++ b/brunner-kyle-kbb310/index-kyle.html
@@ -5,8 +5,9 @@
 <title>ISAW GA3024</title>
 </head>
 <body>
-<p> <a href='https://en.wikipedia.org/wiki/Hisham%27s_Palace'>It is difficult to establish a secure historical framework for Hisham's Palace. 
+<p> <a href='https://en.wikipedia.org/wiki/Hisham%27s_Palace'>It is <i>difficult</i> to establish a secure <b>historical framework</b> for Hisham's Palace. 
 	No textual sources reference the site, and archaeological excavations are 
-	the only source of further information. An ostracon bearing the name Hisham 
+	the only source of further information. <b><i>An ostracon bearing the name Hisham</b></i> 
 	was found during the course of Baramki's excavations'</a></p>
+<p><img src='https://hmmlorientalia.files.wordpress.com/2013/04/smmj_159_back_pastedown.png'></p>
 </body>
