--- a/georgios-tsolakis-gt939/index2.html
+++ b/georgios-tsolakis-gt939/index2.html
@@ -5,5 +5,23 @@
 <title>ISAW GA3024</title>
 </head>
 <body>
-<p><img src="http://insaph.kcl.ac.uk/images/photo/full/83_D_17A.jpg">I.Aphr. 12.205</a></p>
+<p><img src="http://insaph.kcl.ac.uk/images/photo/full/83_D_17A.jpg">
+<p><a href="http://isaw.nyu.edu/"><b>I.Aphr. 12.205</b></a></p>
+<p>i</p>
+<p>[εἰσησαγ]αμένης τῆς βουλῆς [ἔ]δοξε [τῇ βούλῃ καὶ τῷ δήμῳ ? vac. γνώμη]</p>
+<p>ρχόντων καὶ Ζ̣ήνωνος τοῦ Ὑψικλέους το[ῦ Ζήνωνος τοῦ Ὑψικλέ]-</p>
+<p>ους τοῦ Μενάνδρου τοῦ Ζήνωνος γραμμα̣[τέως δήμου τὸ δεύ]-</p>
+<p>5 τερον καὶ Ἀπολλωνίου τοῦ Δημητρίου τοῦ Λ̣[·· c. 7 ·· τοῦ Δημη]-</p>
+<p>τρίου καὶ Διογένης τοῦ Διογένους τοῦ Μενά[νδρου] [·· c. 6 ·· τῶν]</p>
+<p>ἐπὶ τῆς χώρας στρατηγῶν bar ἐπεὶ Τατία Ὑψικλέ[ους τοῦ Ἀδράσ]-</p>
+<p>του τοῦ Νεικοτείμου τοῦ Ἀρτεμιδώρου το[ῦ Ζήνωνος] [Ἱέρα]-</p>
+<p>κος Ἀτταλὶς γενομένη ἱερεία Σεβαστῶν π̣[άτρος καὶ προγό]-</p>
+<p>10νων ὑπάρχουσα τῶν πρώτων καὶ συνεκτικ[ότων τὴν ?πατρίδα]</p>
+<p>καὶ ἐν γυμνασιαρχίαις καὶ στεφανηφορίαις [καὶ ?ἀγωνοθεσίαις]</p>
+<p>καὶ ἀρχιερωσύναις καὶ ἔργων ἀναθέσεσιν κ[αὶ ·· c. 9 ·· ἐκ τῶν]</p>
+<p>ἰδίων γεγονότων ζήσασα βίον σώφρονα κ[αὶ ?κοσμίον καὶ ἀναλο]-</p>
+<p>γοῦντα τῇ τοῦ γένους σεμνότητι προμοί[ρως νῦν μεθίσταται]</p>
+<p>15 τοῦ βίου ἐπί τε τούτῳ δημόσιον ἡ πόλι[ς ·· c. 16 ··]</p>
+<p>ἁρπάσασά τε τὸ πτῶμα ὁμοθυμαδὸν [·· c. 19 ··]</p>
+<p>vac. vac. [·· ? ·· ? vac. ·· ? ··]</p>
 </body>
