--- a/cole-emily-ecccole/index2.html
+++ b/cole-emily-ecccole/index2.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-    background-color: blue;
+    background-color: #26b6e3;
 }
 
 h1 {
@@ -28,7 +28,7 @@ p {
 </head>
 <body>
 
-<h1>My First CSS Example</h1>
+<h1>Myth Buster</h1>
 <p><span class="person">Cleopatra</span> was not as beautiful as people think. She lived in <span class="place">Egypt</span>.</p>
 
 </body>
