--- a/lovejoy-nathan-ncl291/week2assignment.html
+++ b/lovejoy-nathan-ncl291/week2assignment.html
@@ -49,13 +49,13 @@ img {
 
 <h2>Inscriptions and Copies</h2>
 <p>Block 1)
-<img src="Block 1.png" alt="Block 1" height="400" width="75%">
+<img src="Block 1.png" alt="Block 1" height="400" width="50%" align="middle">
 </p>
 <p>Block 2)
-<img src="Block 2.png" alt="Block 2" height="400" width="75%">
+<img src="Block 2.png" alt="Block 2" height="400" width="50%" align="middle">
 </p>
 <p>Block 3)
-<img src="Block 3.png" alt="Block 3" height="400" width="75%">
+<img src="Block 3.png" alt="Block 3" height="400" width="50%" align="middle">
 </p>
 
 <h2>Transcription</h2>
