--- a/lovejoy-nathan-ncl291/week2assignment.html
+++ b/lovejoy-nathan-ncl291/week2assignment.html
@@ -12,9 +12,9 @@ h1 {
 }
 
 h2 {
-color: black;
-text-align: center;
-text-decoration: underline;
+    color: black;
+    text-align: center;
+    text-decoration: underline;
 }
 
 p {
@@ -22,13 +22,13 @@ p {
     font-size: 20px;
 }
 .place {
-font-weight: bold;
+    font-weight: bold;
 }
 .person {
-text-decoration: underline;
+    text-decoration: underline;
 }
 .title {
-font-style:italic;
+    font-style:italic;
 }
 .right {
     float: right;
@@ -36,6 +36,8 @@ font-style:italic;
     font-size: 16px;
 }
 img {
+    display: block;
+    margin: auto;
     border: 1px solid #ddd;
     border-radius: 4px;
     padding: 5px;
