--- a/lovejoy-nathan-ncl291/week2assignment.html
+++ b/lovejoy-nathan-ncl291/week2assignment.html
@@ -61,7 +61,7 @@ img {
 </p>
 
 <h2>Transcription</h2>
-<p><span class="right">*Note* ? = an educated guess</span>
+<p><span class="right">*Note* "?" = an educated guess</span>
 <p>Block 1)</p>
 <p>SOL<sub>2</sub> MAGNUS.REX IUDEX-<i>LA</i> MONS-<i>tu</i> IUDEX-<i>LA</i> MAGNUS.REX HEROS <i>HATTI+li</i> MAGNUS.REX HEROS INFANS URBS+RA-<i>li</i> MAGNUS.REX HEROS</p>
 <p>Block 2)</p>
