--- a/georgios-tsolakis-gt939/W1/4_19.html
+++ b/georgios-tsolakis-gt939/W1/4_19.html
@@ -9,13 +9,13 @@ body {
 h1 {
     color: black;
     text-align: center;
-    font-family: brill;
+    font-family: ;
     font-size: 30px;
 }
 
 h2 {
     color: black;
-    font-family: brill;
+    font-family: "Gentium Basic";
     font-size: 18px;
 }
 
@@ -23,14 +23,14 @@ h2 {
 
 r1 {
     color: black;
-    font-family: brill;
+    font-family: "Gentium Basic";
     font-size: 18px;
 }
 
 }
 
 r2 {
-    font-family: brill;
+    font-family: "Gentium Basic";
     font-size: 18px;
 }
 
@@ -38,7 +38,7 @@ r2 {
 
 ref1 {
     color: black;
-    font-family: brill;
+    font-family: "Gentium Basic";
     font-size: 18px
 }
 
@@ -46,27 +46,27 @@ ref1 {
 
 ref2 {
     color: red;
-    font-family: brill;
+    font-family: "Gentium Basic";
     font-size: 18px;
 }
 
 
 L {
     color: black;
-    font-family: brill;
+    font-family: "Gentium Basic";
     font-size: 18px;
 }
 
 
 p {
     color: black;
-    font-family: brill;
+    font-family: "Gentium Basic";
     font-size: 18px;
 }
 
 l1 {
     color: blue;
-    font-family: brill;
+    font-family: "Gentium Basic";
     font-size: 12px;
 }
 
