--- a/georgios-tsolakis-gt939/W1/4_19.html
+++ b/georgios-tsolakis-gt939/W1/4_19.html
@@ -84,7 +84,7 @@ l1 {
 </div>
 
 <div>
-<ref1>Reference: </ref1><ref2><font color="darkgreen">Νίγδελης, Π.Μ. (2015) Επιγραφικά Θεσσαλονίκεια ΙΙ, 4.19</font></ref2>
+<ref1>Reference: </ref1><ref2><font color="darkgreen">Νίγδελης, Π.Μ. (2015) Επιγραφικά Θεσσαλονίκεια ΙΙ, Θεσσαλονίκη 4.19</font></ref2>
 </div>
 <div>
 <date>Date: </reference><dat><font color="darkblue">Late 2nd - first half of 3rd cent. AD</font></dat>
