--- a/georgios-tsolakis-gt939/W1/4_19.html
+++ b/georgios-tsolakis-gt939/W1/4_19.html
@@ -164,9 +164,10 @@ l1 {
 
 
 
-<l1>
+<l1><a href=https://isaw-ga-3024.github.io/georgios-tsolakis-gt939/W1/Inscriptions_index.html>
 Go back
-</l1>
+</a></l1>
+
 
 </body>
 </html>
