--- a/georgios-tsolakis-gt939/W1/Inscriptions_index.html
+++ b/georgios-tsolakis-gt939/W1/Inscriptions_index.html
@@ -83,12 +83,11 @@ l1 {
 </div>
 
 <div>
+<h2><a href="https://isaw-ga-3024.github.io/georgios-tsolakis-gt939/W1/4_18.html">Funeral monument of Petronios Aedios Hedistos.</a></h2>
+ 
 <h2><a href="https://isaw-ga-3024.github.io/georgios-tsolakis-gt939/W1/4_19.html">Funeral inscription of Leon.</a></h2>
  
-<h2>Funeral inscription of Leon.</h2>
- 
-<h2>Funeral inscription of Leon.</h2>
-</div>
+<h2><a href="https://isaw-ga-3024.github.io/georgios-tsolakis-gt939/W1/4_24.html">Funeral inscription of Nikopolis.</a></h2>
 
 </body>
 </html>
