--- a/david-ratzan-dmratzan/ActaAlexWeek2.html
+++ b/david-ratzan-dmratzan/ActaAlexWeek2.html
@@ -14,9 +14,6 @@ h1 {
 p {
     font-family: verdana;
     font-size: 20px;
-}
-
-.img {
     max-width: 100px;
 }
 
@@ -32,7 +29,7 @@ p {
 <title>Section from <i>Power, Form and Genre in the</i> Acta Alexandrinorum</title>
 </head>
 <body>
-In the Acta Isidori we have a trail scene, set at the imperial court in Rome, in which Isidorus and Lampon, aggressively proud Alexandrian elites, argue with the emperor Claudius. From what we can gather, Isidorus seems to have been a prosecutor or informer, a delator of sorts, in the court of Claudius’s predecessor, Caligula. Now Isidorus is accusing King Agrippa of something, despite Claudius’ warnings to be careful because he has brought down friends of his in the past. One of these friends is a very interesting person. Naevius is surely Naevius Sertorius Macro, the Praetorian Prefect who, according to Tacitus, engineered the downfall of Tiberius’ powerful Praetorian Prefect Sejanus and Caligula’s succession. 
+In the Acta Isidori we have a trial scene, set at the imperial court in Rome, in which Isidorus and Lampon, aggressively proud Alexandrian elites, argue with the emperor Claudius. From what we can gather, Isidorus seems to have been a prosecutor or informer, a delator of sorts, in the court of Claudius’s predecessor, Caligula. Now Isidorus is accusing King Agrippa of something, despite Claudius’ warnings to be careful because he has brought down friends of his in the past. One of these friends is a very interesting person. Naevius is surely Naevius Sertorius Macro, the Praetorian Prefect who, according to Tacitus, engineered the downfall of Tiberius’ powerful Praetorian Prefect Sejanus and Caligula’s succession. 
 
 <img src="http://ww2.smb.museum/berlpap/Original/P_08877_V.jpg">
 Isidorus, Lampon, and Balbillus are also known figures. Philo, an elite, Hellenized Jew from Alexandria, casts the first two as some of the chief villains in the Greek-Jewish tensions roiling Alexandria in the 30’s, which exploded in a spasm of violence in 38, when the Jews were ultimately forced into the Delta quadrant of the city and pillaged. Two sets of ambassadors went to Rome in the aftermath of the riots, one Greek and one Jewish, with Philo being a member of the Jewish delegation and whose political pamphlets we still have. According to Philo, Isidorus was in exile in Roman and was involved with the prosecution of Aulus Avilius Flaccus, the Prefect of Egypt, whose actions in 38 added fuel to the fire. Here, then, we seem to have further evidence of Isidorus’s activity in Rome. 
