--- a/david-ratzan-dmratzan/ActaAlexWeek2.html
+++ b/david-ratzan-dmratzan/ActaAlexWeek2.html
@@ -14,7 +14,7 @@ h1 {
 p {
     font-family: verdana;
     font-size: 20px;
-    max-width: 100px;
+    max-width: 300px;
 }
 
 .place {
@@ -29,14 +29,14 @@ p {
 <title>Section from <i>Power, Form and Genre in the</i> Acta Alexandrinorum</title>
 </head>
 <body>
-In the Acta Isidori we have a trial scene, set at the imperial court in Rome, in which Isidorus and Lampon, aggressively proud Alexandrian elites, argue with the emperor Claudius. From what we can gather, Isidorus seems to have been a prosecutor or informer, a delator of sorts, in the court of Claudius’s predecessor, Caligula. Now Isidorus is accusing King Agrippa of something, despite Claudius’ warnings to be careful because he has brought down friends of his in the past. One of these friends is a very interesting person. Naevius is surely Naevius Sertorius Macro, the Praetorian Prefect who, according to Tacitus, engineered the downfall of Tiberius’ powerful Praetorian Prefect Sejanus and Caligula’s succession. 
+<p>In the Acta Isidori we have a trial scene, set at the imperial court in Rome, in which Isidorus and Lampon, aggressively proud Alexandrian elites, argue with the emperor Claudius. From what we can gather, Isidorus seems to have been a prosecutor or informer, a delator of sorts, in the court of Claudius’s predecessor, Caligula. Now Isidorus is accusing King Agrippa of something, despite Claudius’ warnings to be careful because he has brought down friends of his in the past. One of these friends is a very interesting person. Naevius is surely Naevius Sertorius Macro, the Praetorian Prefect who, according to Tacitus, engineered the downfall of Tiberius’ powerful Praetorian Prefect Sejanus and Caligula’s succession. 
 
 <img src="http://ww2.smb.museum/berlpap/Original/P_08877_V.jpg">
 Isidorus, Lampon, and Balbillus are also known figures. Philo, an elite, Hellenized Jew from Alexandria, casts the first two as some of the chief villains in the Greek-Jewish tensions roiling Alexandria in the 30’s, which exploded in a spasm of violence in 38, when the Jews were ultimately forced into the Delta quadrant of the city and pillaged. Two sets of ambassadors went to Rome in the aftermath of the riots, one Greek and one Jewish, with Philo being a member of the Jewish delegation and whose political pamphlets we still have. According to Philo, Isidorus was in exile in Roman and was involved with the prosecution of Aulus Avilius Flaccus, the Prefect of Egypt, whose actions in 38 added fuel to the fire. Here, then, we seem to have further evidence of Isidorus’s activity in Rome. 
 
 Finally, King Agrippa is either M. Julius Agrippa, Herod the Great’s grandson, also known as Herod Agrippa (11 BCE – 44CE), whose visit to Alexandria in 38 was the spark that ignited city. If so, the dramatic date of our text is likely 41. If not, it is his son by the same name and the last of the Herodians (27/28 – 93/94), and the year is 52 or 53. Sadly, although the text begins with the date, the year is lost in a lacuna, and there are arguments for and against both dates.
 
-Besides the historical grounding, two other features of this trial scene stand out. 
+Besides the historical grounding, two other features of this trial scene stand out. </p>
 
 The first is the prominence of Isidorus’s anti-Semitism. The Greek-Jewish violence of 38 and the dueling embassies that subsequently travelled to Rome gave birth a complex literary response, and we should imagine that this text originally circulated and competed with Philo’s pamphlets, dueling forms of ex post facto political spin literature in the ensuing cold war between the Greek and Jewish factions. Anti-Semitism is a constant feature of the first century of Acta texts, as they update the conflict between Alexandrians, Jews, and Roman authorities in each successive generation from Caligula to Hadrian. We should recall that between 38 and 130 the Jews had revolted three times against the imperial order, with the Jews in Alexandrian and Egypt deeply involved in the revolts of 66-70 and 115-117. The last revolt engulfed much of Egypt and resulted in the decimation of the Jewish population and generations of hatred and prejudice. We know from one petition to Severus and Caracalla that Oxyrhynchos celebrated the victory in the “war” against the Jews a century later (P.Oxy. III 705 = CPJ 450), when most of Acta texts were copied. So, while it is important to note that the Acta texts are not merely vehicles for anti-Semitic sentiment, such feelings helped to maintain a market for this literature in Egypt even as late as the third century. 
 
