--- a/david-ratzan-dmratzan/ActaAlexWeek2.html
+++ b/david-ratzan-dmratzan/ActaAlexWeek2.html
@@ -12,8 +12,8 @@ h1 {
 }
 
 p {
-    font-family: verdana;
-    font-size: 20px;
+    font-family: garamond;
+    font-size: 14px;
     max-width: 300px;
 }
 
