--- a/david-ratzan-dmratzan/ActaAlexWeek2.html
+++ b/david-ratzan-dmratzan/ActaAlexWeek2.html
@@ -27,13 +27,18 @@ img {
 
 .person {
  font-weight: bold
+ }
+ 
+ .emperor {
+ font-variant: small-caps
+ }
  
  </style>
 <meta charset=utf-8>
 <title>Section from <i>Power, Form and Genre in the</i> Acta Alexandrinorum</title>
 </head>
 <body>
-<p>In the <i>Acta Isidori</i> we have a trial scene, set at the imperial court in Rome, in which Isidorus and Lampon, aggressively proud Alexandrian elites, argue with the emperor Claudius. From what we can gather, Isidorus seems to have been a prosecutor or informer, a delator of sorts, in the court of Claudius’s predecessor, Caligula. Now Isidorus is accusing King Agrippa of something, despite Claudius’ warnings to be careful because he has brought down friends of his in the past. One of these friends is a very interesting person. Naevius is surely Naevius Sertorius Macro, the Praetorian Prefect who, according to Tacitus, engineered the downfall of Tiberius’ powerful Praetorian Prefect Sejanus and Caligula’s succession. </p>
+<p>In the <i>Acta Isidori</i> we have a trial scene, set at the imperial court in Rome, in which <span class="person">Isidorus</span> and <span class="person">Lampon</span>, aggressively proud Alexandrian elites, argue with the emperor <span class="emperor">Claudius</span>. From what we can gather, <span class="person">Isidorus</span> seems to have been a prosecutor or informer, a <i>delator</i> of sorts, in the court of <span class="emperor">Claudius’s</span> predecessor, <span class="emperor">Caligula<span>. Now Isidorus is accusing King Agrippa of something, despite Claudius’ warnings to be careful because he has brought down friends of his in the past. One of these friends is a very interesting person. Naevius is surely Naevius Sertorius Macro, the Praetorian Prefect who, according to Tacitus, engineered the downfall of Tiberius’ powerful Praetorian Prefect Sejanus and Caligula’s succession. </p>
 
 <p><img src="http://ww2.smb.museum/berlpap/Original/P_08877_V.jpg"></p>
 
