added link, fig caption

--- a/david-ratzan-dmratzan/ActaAlexWeek2.html
+++ b/david-ratzan-dmratzan/ActaAlexWeek2.html
@@ -40,7 +40,11 @@ img {
 <body>
 <p>In the <i>Acta Isidori</i> we have a trial scene, set at the imperial court in Rome, in which <span class="person">Isidorus</span> and <span class="person">Lampon</span>, aggressively proud Alexandrian elites, argue with the emperor <span class="emperor">Claudius</span>. From what we can gather, <span class="person">Isidorus</span> seems to have been a prosecutor or informer, a <i>delator</i> of sorts, in the court of <span class="emperor">Claudius’s</span> predecessor, <span class="emperor">Caligula</span>. Now <span class="person">Isidorus</span> is accusing <span class="person">King Agrippa</span> of something, despite <span class="emperor">Claudius’s </span> warnings to be careful because he has brought down friends of his in the past. One of these friends is a very interesting person. "Naevius" is surely <span class="person">Naevius Sertorius Macro</span>, the Praetorian Prefect who, according to <span class="person">Tacitus</span>, engineered the downfall of <span class="emperor">Tiberius’s</span> powerful Praetorian Prefect <span class="person">Sejanus</span> and <span class="emperor">Caligula’s</span> succession. </p>
 
-<p><img src="http://ww2.smb.museum/berlpap/Original/P_08877_V.jpg"></p>
+<p>
+<figure>
+<img src="http://ww2.smb.museum/berlpap/Original/P_08877_V.jpg">
+ <figcaption><font-size: 14px><i>P.Berol.</i> <a href="http://ww2.smb.museum/berlpap/index.php/02526/">8877</a>, a fragment of the so-called <i>Acta Isidori</i></figcaption>
+</figure></p>
 
 Isidorus, Lampon, and Balbillus are also known figures. Philo, an elite, Hellenized Jew from Alexandria, casts the first two as some of the chief villains in the Greek-Jewish tensions roiling Alexandria in the 30’s, which exploded in a spasm of violence in 38, when the Jews were ultimately forced into the Delta quadrant of the city and pillaged. Two sets of ambassadors went to Rome in the aftermath of the riots, one Greek and one Jewish, with Philo being a member of the Jewish delegation and whose political pamphlets we still have. According to Philo, Isidorus was in exile in Roman and was involved with the prosecution of Aulus Avilius Flaccus, the Prefect of Egypt, whose actions in 38 added fuel to the fire. Here, then, we seem to have further evidence of Isidorus’s activity in Rome. 
 
