--- a/david-ratzan-dmratzan/ActaAlexWeek2.html
+++ b/david-ratzan-dmratzan/ActaAlexWeek2.html
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-    color: white;
+    color: black;
     text-align: center;
 }
 
@@ -22,7 +22,7 @@ p {
 }
 
 img {
-  max-width: 600px;
+  max-width: 500px;
 }
 
 .person {
@@ -38,6 +38,8 @@ img {
 <title>Section from <i>Power, Form and Genre in the</i> Acta Alexandrinorum</title>
 </head>
 <body>
+<h1>Section from <i>Power, Form and Genre in the</i> Acta Alexandrinorum</h1>
+
 <p>In the <i>Acta Isidori</i> we have a trial scene, set at the imperial court in Rome, in which <span class="person">Isidorus</span> and <span class="person">Lampon</span>, aggressively proud Alexandrian elites, argue with the emperor <span class="emperor">Claudius</span>. From what we can gather, <span class="person">Isidorus</span> seems to have been a prosecutor or informer, a <i>delator</i> of sorts, in the court of <span class="emperor">Claudius’s</span> predecessor, <span class="emperor">Caligula</span>. Now <span class="person">Isidorus</span> is accusing <span class="person">King Agrippa</span> of something, despite <span class="emperor">Claudius’s </span> warnings to be careful because he has brought down friends of his in the past. One of these friends is a very interesting person. "Naevius" is surely <span class="person">Naevius Sertorius Macro</span>, the Praetorian Prefect who, according to <span class="person">Tacitus</span>, engineered the downfall of <span class="emperor">Tiberius’s</span> powerful Praetorian Prefect <span class="person">Sejanus</span> and <span class="emperor">Caligula’s</span> succession. </p>
 
 <p>
@@ -46,17 +48,15 @@ img {
  <figcaption><font-size: 14px><i>P.Berol.</i> <a href="http://ww2.smb.museum/berlpap/index.php/02526/">8877</a>, a fragment of the so-called <i>Acta Isidori</i></figcaption>
 </figure></p>
 
-Isidorus, Lampon, and Balbillus are also known figures. Philo, an elite, Hellenized Jew from Alexandria, casts the first two as some of the chief villains in the Greek-Jewish tensions roiling Alexandria in the 30’s, which exploded in a spasm of violence in 38, when the Jews were ultimately forced into the Delta quadrant of the city and pillaged. Two sets of ambassadors went to Rome in the aftermath of the riots, one Greek and one Jewish, with Philo being a member of the Jewish delegation and whose political pamphlets we still have. According to Philo, Isidorus was in exile in Roman and was involved with the prosecution of Aulus Avilius Flaccus, the Prefect of Egypt, whose actions in 38 added fuel to the fire. Here, then, we seem to have further evidence of Isidorus’s activity in Rome. 
+<p>Isidorus, Lampon, and Balbillus are also known figures. Philo, an elite, Hellenized Jew from Alexandria, casts the first two as some of the chief villains in the Greek-Jewish tensions roiling Alexandria in the 30’s, which exploded in a spasm of violence in 38, when the Jews were ultimately forced into the Delta quadrant of the city and pillaged. Two sets of ambassadors went to Rome in the aftermath of the riots, one Greek and one Jewish, with Philo being a member of the Jewish delegation and whose political pamphlets we still have. According to Philo, Isidorus was in exile in Roman and was involved with the prosecution of Aulus Avilius Flaccus, the Prefect of Egypt, whose actions in 38 added fuel to the fire. Here, then, we seem to have further evidence of Isidorus’s activity in Rome.</p>
 
-Finally, King Agrippa is either M. Julius Agrippa, Herod the Great’s grandson, also known as Herod Agrippa (11 BCE – 44CE), whose visit to Alexandria in 38 was the spark that ignited city. If so, the dramatic date of our text is likely 41. If not, it is his son by the same name and the last of the Herodians (27/28 – 93/94), and the year is 52 or 53. Sadly, although the text begins with the date, the year is lost in a lacuna, and there are arguments for and against both dates.
+<p>Finally, King Agrippa is either M. Julius Agrippa, Herod the Great’s grandson, also known as Herod Agrippa (11 BCE – 44CE), whose visit to Alexandria in 38 was the spark that ignited city. If so, the dramatic date of our text is likely 41. If not, it is his son by the same name and the last of the Herodians (27/28 – 93/94), and the year is 52 or 53. Sadly, although the text begins with the date, the year is lost in a lacuna, and there are arguments for and against both dates.</p>
 
-Besides the historical grounding, two other features of this trial scene stand out. 
+<p>Besides the historical grounding, two other features of this trial scene stand out. The first is the prominence of Isidorus’s anti-Semitism. The Greek-Jewish violence of 38 and the dueling embassies that subsequently travelled to Rome gave birth a complex literary response, and we should imagine that this text originally circulated and competed with Philo’s pamphlets, dueling forms of ex post facto political spin literature in the ensuing cold war between the Greek and Jewish factions. Anti-Semitism is a constant feature of the first century of Acta texts, as they update the conflict between Alexandrians, Jews, and Roman authorities in each successive generation from Caligula to Hadrian. We should recall that between 38 and 130 the Jews had revolted three times against the imperial order, with the Jews in Alexandrian and Egypt deeply involved in the revolts of 66-70 and 115-117. The last revolt engulfed much of Egypt and resulted in the decimation of the Jewish population and generations of hatred and prejudice. We know from one petition to Severus and Caracalla that Oxyrhynchos celebrated the victory in the “war” against the Jews a century later (P.Oxy. III 705 = CPJ 450), when most of Acta texts were copied. So, while it is important to note that the Acta texts are not merely vehicles for anti-Semitic sentiment, such feelings helped to maintain a market for this literature in Egypt even as late as the third century.</p>
 
-The first is the prominence of Isidorus’s anti-Semitism. The Greek-Jewish violence of 38 and the dueling embassies that subsequently travelled to Rome gave birth a complex literary response, and we should imagine that this text originally circulated and competed with Philo’s pamphlets, dueling forms of ex post facto political spin literature in the ensuing cold war between the Greek and Jewish factions. Anti-Semitism is a constant feature of the first century of Acta texts, as they update the conflict between Alexandrians, Jews, and Roman authorities in each successive generation from Caligula to Hadrian. We should recall that between 38 and 130 the Jews had revolted three times against the imperial order, with the Jews in Alexandrian and Egypt deeply involved in the revolts of 66-70 and 115-117. The last revolt engulfed much of Egypt and resulted in the decimation of the Jewish population and generations of hatred and prejudice. We know from one petition to Severus and Caracalla that Oxyrhynchos celebrated the victory in the “war” against the Jews a century later (P.Oxy. III 705 = CPJ 450), when most of Acta texts were copied. So, while it is important to note that the Acta texts are not merely vehicles for anti-Semitic sentiment, such feelings helped to maintain a market for this literature in Egypt even as late as the third century. 
+<p>Second, although the Acts of Isidore appear to have a historical basis, they also seem to be a species of fiction. Isidorus is aggressively, suicidally proud, repeatedly insulting Claudius in front of his consistory. Are we to imagine that Claudius or any Roman emperor would have suffered being spoken to like this? Hardly. Do we believe that this conversation would have been recorded? Supposing it was, would it have been made accessible? At best, it is based on some sort of minutes. However we imagine the relationship between the original source documents and our texts, it is clear that Alexandrian patriotism and heroism in the fact of Roman tyranny is the unifying literary theme driving the production, if not always the reading, of these texts. Also interesting is the fact that in the act of composition, the some of features of a documentary protocol should have either been retained or superadded.</p>
 
-Second, although the Acts of Isidore appear to have a historical basis, they also seem to be a species of fiction. Isidorus is aggressively, suicidally proud, repeatedly insulting Claudius in front of his consistory. Are we to imagine that Claudius or any Roman emperor would have suffered being spoken to like this? Hardly. Do we believe that this conversation would have been recorded? Supposing it was, would it have been made accessible? At best, it is based on some sort of minutes. However we imagine the relationship between the original source documents and our texts, it is clear that Alexandrian patriotism and heroism in the fact of Roman tyranny is the unifying literary theme driving the production, if not always the reading, of these texts. Also interesting is the fact that in the act of composition, the some of features of a documentary protocol should have either been retained or superadded.
-
-But, what are we reading? 
+<p>But, what are we reading? 
 
 Form
 
