--- a/david-ratzan-dmratzan/ActaAlexWeek2.html
+++ b/david-ratzan-dmratzan/ActaAlexWeek2.html
@@ -22,9 +22,11 @@ p {
  font-style: italic 
 }
 
-img {
-  max-width: 500px;
-  text-align: center;
+IMG.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+      max-width: 400px;
 }
 
 .person {
