centering image take 2

--- a/david-ratzan-dmratzan/ActaAlexWeek2.html
+++ b/david-ratzan-dmratzan/ActaAlexWeek2.html
@@ -48,7 +48,7 @@ IMG.displayed {
 
 <p>
 <figure>
-<img src="http://ww2.smb.museum/berlpap/Original/P_08877_V.jpg">
+<IMG class="displayed" src="http://ww2.smb.museum/berlpap/Original/P_08877_V.jpg">
  <figcaption><font-size: 14px><i>P.Berol.</i> <a href="http://ww2.smb.museum/berlpap/index.php/02526/">8877</a>, a fragment of the so-called <i>Acta Isidori</i></figcaption>
 </figure></p>
 
