--- a/david-ratzan-dmratzan/ActaAlexWeek2.html
+++ b/david-ratzan-dmratzan/ActaAlexWeek2.html
@@ -42,7 +42,7 @@ IMG.displayed {
 <title>Section from <i>Power, Form and Genre in the</i> Acta Alexandrinorum</title>
 </head>
 <body>
-<h1>Section from <i>Power, Form and Genre in the</i> Acta Alexandrinorum</h1>
+<p><h1>Section from <i>Power, Form and Genre in the</i> Acta Alexandrinorum</h1></p>
 
 <p>In the <i>Acta Isidori</i> we have a trial scene, set at the imperial court in Rome, in which <span class="person">Isidorus</span> and <span class="person">Lampon</span>, aggressively proud Alexandrian elites, argue with the emperor <span class="emperor">Claudius</span>. From what we can gather, <span class="person">Isidorus</span> seems to have been a prosecutor or informer, a <i>delator</i> of sorts, in the court of <span class="emperor">Claudius’s</span> predecessor, <span class="emperor">Caligula</span>. Now <span class="person">Isidorus</span> is accusing <span class="person">King Agrippa</span> of something, despite <span class="emperor">Claudius’s </span> warnings to be careful because he has brought down friends of his in the past. One of these friends is a very interesting person. "Naevius" is surely <span class="person">Naevius Sertorius Macro</span>, the Praetorian Prefect who, according to <span class="person">Tacitus</span>, engineered the downfall of <span class="emperor">Tiberius’s</span> powerful Praetorian Prefect <span class="person">Sejanus</span> and <span class="emperor">Caligula’s</span> succession. </p>
 
