--- a/david-ratzan-dmratzan/ActaAlexWeek2.html
+++ b/david-ratzan-dmratzan/ActaAlexWeek2.html
@@ -23,13 +23,22 @@ p {
  font-style: italic 
 }
 
-IMG.displayed {
-    display: block;
+figure {
+    display: inline-block;
     margin-left: auto;
     margin-right: auto; 
-      max-width: 400px;
+    max-width: 400px;
 }
 
+figure img {
+    vertical-align: top;
+}
+
+figure figcaption {
+    text-align: center;
+       font-size: 14px;
+    
+}
 
 .person {
  font-weight: bold
@@ -50,8 +59,8 @@ IMG.displayed {
 
 <p>
 <figure>
-<IMG class="displayed" src="http://ww2.smb.museum/berlpap/Original/P_08877_V.jpg">
- <figcaption><font-size: 12px><text-align: center><i>P.Berol.</i> <a href="http://ww2.smb.museum/berlpap/index.php/02526/">8877</a>, a fragment of the so-called <i>Acta Isidori</i></figcaption>
+<img src="http://ww2.smb.museum/berlpap/Original/P_08877_V.jpg">
+ <figcaption><i>P.Berol.</i> <a href="http://ww2.smb.museum/berlpap/index.php/02526/">8877</a>, a fragment of the so-called <i>Acta Isidori</i></figcaption>
 </figure></p>
 
 <p>Isidorus, Lampon, and Balbillus are also known figures. Philo, an elite, Hellenized Jew from Alexandria, casts the first two as some of the chief villains in the Greek-Jewish tensions roiling Alexandria in the 30’s, which exploded in a spasm of violence in 38, when the Jews were ultimately forced into the Delta quadrant of the city and pillaged. Two sets of ambassadors went to Rome in the aftermath of the riots, one Greek and one Jewish, with Philo being a member of the Jewish delegation and whose political pamphlets we still have. According to Philo, Isidorus was in exile in Roman and was involved with the prosecution of Aulus Avilius Flaccus, the Prefect of Egypt, whose actions in 38 added fuel to the fire. Here, then, we seem to have further evidence of Isidorus’s activity in Rome.</p>
