--- a/david-ratzan-dmratzan/ActaAlexWeek2.html
+++ b/david-ratzan-dmratzan/ActaAlexWeek2.html
@@ -31,13 +31,14 @@ figure {
 }
 
 figure img {
-    vertical-align: top;
+    margin-left: auto;
+    margin-right: auto; 
+    max-width: 400px;
 }
 
 figure figcaption {
     text-align: center;
        font-size: 14px;
-    
 }
 
 .person {
