--- a/david-ratzan-dmratzan/ActaAlexWeek2.html
+++ b/david-ratzan-dmratzan/ActaAlexWeek2.html
@@ -16,7 +16,7 @@ p {
     font-family: garamond;
     font-size: 18px;
     max-width: 1000px;
-    text-align: center;
+    text-align: left;
 }
 
 .place {
