--- a/david-ratzan-dmratzan/ActaAlexWeek2.html
+++ b/david-ratzan-dmratzan/ActaAlexWeek2.html
@@ -27,7 +27,7 @@ p {
 }
 
 .place {
- font-style: italic 
+ text-decoration: underline
 }
 
 figure {
@@ -57,6 +57,10 @@ figure figcaption {
  font-variant: small-caps
  }
  
+  .date {
+ font-variant: small-caps
+ }
+ 
  </style>
 <meta charset=utf-8>
 <title>Section from <i>Power, Form and Genre in the</i> Acta Alexandrinorum</title>
@@ -72,9 +76,9 @@ figure figcaption {
  <figcaption><i>P.Berol.</i> <a href="http://ww2.smb.museum/berlpap/index.php/02526/">8877</a>, a fragment of the so-called <i>Acta Isidori</i></figcaption>
 </figure></p>
 
-<p><span class="person">Isidorus</span>, <span class="person">Lampon</span>, and <span class="person">Balbillus</span> are also known figures. <span class="person">Philo</span>, an elite, Hellenized Jew from <span class="place">Alexandria</span>, casts the first two as some of the chief villains in the Greek-Jewish tensions roiling <span class="place">Alexandria</span> in the 30’s, which exploded in a spasm of violence in 38, when the Jews were ultimately forced into the <span class="place">Delta quadrant</span> of the city and pillaged. Two sets of ambassadors went to Rome in the aftermath of the riots, one Greek and one Jewish, with <span class="person">Philo</span> being a member of the Jewish delegation and whose political pamphlets we still have. According to <span class="person">Philo</span>, <span class="person">Isidorus</span> was in exile in <span class="place">Rome</span> and was involved with the prosecution of <span class="person">Aulus Avilius Flaccus</span>, the Prefect of Egypt, whose actions in 38 added fuel to the fire. Here, then, we seem to have further evidence of <span class="person">Isidorus’s</span> activity in <span class="place">Rome</span>.</p>
+<p><span class="person">Isidorus</span>, <span class="person">Lampon</span>, and <span class="person">Balbillus</span> are also known figures. <span class="person">Philo</span>, an elite, Hellenized Jew from <span class="place">Alexandria</span>, casts the first two as some of the chief villains in the Greek-Jewish tensions roiling <span class="place">Alexandria</span> in the 30’s, which exploded in a spasm of violence in 38, when the Jews were ultimately forced into the <span class="place">Delta quadrant</span> of the city and pillaged. Two sets of ambassadors went to <span class="place">Rome</span> in the aftermath of the riots, one Greek and one Jewish, with <span class="person">Philo</span> being a member of the Jewish delegation and whose political pamphlets we still have. According to <span class="person">Philo</span>, <span class="person">Isidorus</span> was in exile in <span class="place">Rome</span> and was involved with the prosecution of <span class="person">Aulus Avilius Flaccus</span>, the Prefect of Egypt, whose actions in 38 added fuel to the fire. Here, then, we seem to have further evidence of <span class="person">Isidorus’s</span> activity in <span class="place">Rome</span>.</p>
 
-<p>Finally, King Agrippa is either M. Julius Agrippa, Herod the Great’s grandson, also known as Herod Agrippa (11 BCE – 44CE), whose visit to Alexandria in 38 was the spark that ignited city. If so, the dramatic date of our text is likely 41. If not, it is his son by the same name and the last of the Herodians (27/28 – 93/94), and the year is 52 or 53. Sadly, although the text begins with the date, the year is lost in a lacuna, and there are arguments for and against both dates.</p>
+<p>Finally, <span class="person">King Agrippa</span> is either <span class="person">M. Julius Agrippa</span>, <span class="person">Herod the Great’s</span> grandson, also known as <span class="person">Herod Agrippa (11 BCE – 44CE), whose visit to Alexandria in 38 was the spark that ignited city. If so, the dramatic date of our text is likely 41. If not, it is his son by the same name and the last of the Herodians (27/28 – 93/94), and the year is 52 or 53. Sadly, although the text begins with the date, the year is lost in a lacuna, and there are arguments for and against both dates.</p>
 
 <p>Besides the historical grounding, two other features of this trial scene stand out. The first is the prominence of Isidorus’s anti-Semitism. The Greek-Jewish violence of 38 and the dueling embassies that subsequently travelled to Rome gave birth a complex literary response, and we should imagine that this text originally circulated and competed with Philo’s pamphlets, dueling forms of ex post facto political spin literature in the ensuing cold war between the Greek and Jewish factions. Anti-Semitism is a constant feature of the first century of Acta texts, as they update the conflict between Alexandrians, Jews, and Roman authorities in each successive generation from Caligula to Hadrian. We should recall that between 38 and 130 the Jews had revolted three times against the imperial order, with the Jews in Alexandrian and Egypt deeply involved in the revolts of 66-70 and 115-117. The last revolt engulfed much of Egypt and resulted in the decimation of the Jewish population and generations of hatred and prejudice. We know from one petition to Severus and Caracalla that Oxyrhynchos celebrated the victory in the “war” against the Jews a century later (P.Oxy. III 705 = CPJ 450), when most of Acta texts were copied. So, while it is important to note that the Acta texts are not merely vehicles for anti-Semitic sentiment, such feelings helped to maintain a market for this literature in Egypt even as late as the third century.</p>
 
