--- a/miller-marlee-marleemh/index.html
+++ b/miller-marlee-marleemh/index.html
@@ -5,5 +5,5 @@
 <title>ISAW GA3024</title>
 </head>
 <body>
-<p><a href="http://isaw.nyu.edu/">ISAW</a></p>
+<p><a href="http://ifa.nyu.edu/">IFA</a></p>
 </body>
